--- a/MomentoI/index.html
+++ b/MomentoI/index.html
@@ -9,7 +9,7 @@
 
     <!--CSS-->
 
-    <link href="style2.css" rel="stylesheet" type="text/css"> 
+    <link href="./estilos/index.css" rel="stylesheet" type="text/css"> 
    
 
     <title>MomentoI Programación WEB II</title>
