Consumo de API Sportify

--- a/MomentoI/index.html
+++ b/MomentoI/index.html
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="SpotyApp/index.html">SpotyApp</a>
+                  <a class="nav-link" href="SpotyApp/SpotyMain.html">SpotyApp</a>
                 </li>
                
             </ul>
