Consumo API Spotify

--- a/MomentoI/SpotyApp/SpotyMain.html
+++ b/MomentoI/SpotyApp/SpotyMain.html
@@ -87,11 +87,11 @@
 
             <div class="col-sm-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://placeimg.com/400/400/animals" class="card-img-top" alt="Imagen">
+                    <img src="" id="imagen3" class="card-img-top" alt="Imagen">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title" id="titulo3"></h5>
+                      <audio src="" class="w-100" id="audio3" controls></audio>
+                      
                     </div>
                   </div>
             </div>
